# proyecto-e3-iic2173

./: .code-workspace  .editorconfig  .gitignore  Makefile  arquisis.code-workspace  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  main.tf  package-lock.json
.github/workflows/: deploy.yml  lint.yml  lint_backend.yml  lint_frontend.yml
docs/: deploy.md
services/auth/: config.yml
services/backend/: .env.example  .env.example.dev  .env.example.prod  Dockerfile  README.md  docker-compose.yml  init-letsencrypt.sh  init-server.sh  package.json
services/backend/src/: app.js  routes.js
services/chat/: .dockerignore  .gitignore  Dockerfile.dev  Dockerfile.prod  pyproject.toml  readme.md  requirements.txt
services/chat/app/: __init__.py  auth.py  config.py  connections.py  db.py  dependencies.py  docs.py
services/chat/app/all_chats/: __init__.py  query.sql
services/chat/app/models/: messages.py  users.py
services/chat/app/routes/: chat.py
services/frontend/: .eslintrc.json  .gitignore  Dockerfile.dev  Dockerfile.prod  README.md  docker-compose.dev.yml  docker-compose.yml  init-letsencrypt.sh  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
services/frontend/components/: Form.tsx  Input.tsx  RequireAuth.tsx
services/indexes/: .env.example  .env.example.dev  .gitignore  .yo-rc.json  Dockerfile  Dockerfile.dev  Dockerfile.prod  README.md  docker-compose.yml  init-server.sh  package.json
services/metrics/: prometheus.yml
services/nginx/: nginx.conf
services/reverse-proxy/: Caddyfile
(+118 files in other folders)
